[project]
name = "timestamp-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "audioop-lts>=0.2.1",
    "discord>=2.3.2",
    "discord-interactions>=0.4.0",
    "discord-py>=2.4.0",
    "discord-py-slash-command>=4.2.1",
    "parsedatetime>=2.6",
    "python-dotenv>=1.0.1",
    "pytz>=2025.1",
]
